[gd_scene load_steps=4 format=3 uid="uid://wfc5d7c5u2qc"]

[ext_resource type="Script" path="res://Scenes/Levels/GraphDataEditor/graph_data_editor.gd" id="1_nl6gu"]
[ext_resource type="PackedScene" uid="uid://w8a8hsf43n8g" path="res://graph_data.tscn" id="2_k5wwy"]
[ext_resource type="Script" path="res://Scenes/UI/SceneButton.gd" id="3_tgwf0"]

[node name="GraphDataEditor" type="Control" node_paths=PackedStringArray("graph_data", "graph_text_display", "vertex_index", "edge_start_index", "edge_end_index", "save_file_dialog", "load_file_dialog")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nl6gu")
graph_data = NodePath("GraphData")
graph_text_display = NodePath("MarginContainer/Control/PanelContainer/MarginContainer/VBoxContainer/GraphTextDisplay")
vertex_index = NodePath("MarginContainer/Control/VBoxContainer/VertexActions/VertexIndex")
edge_start_index = NodePath("MarginContainer/Control/VBoxContainer/EdgeActions/HBoxContainer/VBoxContainer/EdgeStartIndex")
edge_end_index = NodePath("MarginContainer/Control/VBoxContainer/EdgeActions/HBoxContainer/VBoxContainer/EdgeEndIndex")
save_file_dialog = NodePath("SaveFileDialog")
load_file_dialog = NodePath("LoadFileDialog")

[node name="GraphData" parent="." instance=ExtResource("2_k5wwy")]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -496.0
offset_bottom = 40.0
grow_horizontal = 0
alignment = 2

[node name="Redo" type="Button" parent="MarginContainer/Control/HBoxContainer"]
visible = false
layout_mode = 2
text = "Redo"

[node name="Undo" type="Button" parent="MarginContainer/Control/HBoxContainer"]
layout_mode = 2
text = "Undo"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Control/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="SaveLoad" type="HBoxContainer" parent="MarginContainer/Control/HBoxContainer"]
layout_mode = 2

[node name="SaveGraph" type="Button" parent="MarginContainer/Control/HBoxContainer/SaveLoad"]
layout_mode = 2
text = "Save Graph"

[node name="LoadGraph" type="Button" parent="MarginContainer/Control/HBoxContainer/SaveLoad"]
layout_mode = 2
text = "Load Graph"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Control/HBoxContainer/SaveLoad"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Pause" type="Button" parent="MarginContainer/Control/HBoxContainer"]
visible = false
layout_mode = 2
text = "Pause"

[node name="MainMenu" type="Button" parent="MarginContainer/Control/HBoxContainer"]
layout_mode = 2
text = "Go to Main Menu"
script = ExtResource("3_tgwf0")
scene_path = "res://Scenes/Levels/MainMenu/main_menu.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control"]
layout_mode = 0
offset_right = 534.0
offset_bottom = 283.0

[node name="GraphProperties" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/GraphProperties"]
layout_mode = 2
text = "Graph properties:"

[node name="Control4" type="Control" parent="MarginContainer/Control/VBoxContainer/GraphProperties"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="MakeReflexive" type="Button" parent="MarginContainer/Control/VBoxContainer/GraphProperties"]
layout_mode = 2
text = "Make reflexive"

[node name="MakeUndirected" type="Button" parent="MarginContainer/Control/VBoxContainer/GraphProperties"]
layout_mode = 2
text = "Make undirected"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2

[node name="GraphActions" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/GraphActions"]
layout_mode = 2
text = "Graph actions:"

[node name="Control4" type="Control" parent="MarginContainer/Control/VBoxContainer/GraphActions"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer/GraphActions"]
layout_mode = 2

[node name="Fill" type="Button" parent="MarginContainer/Control/VBoxContainer/GraphActions/HBoxContainer"]
layout_mode = 2
text = "Fill"

[node name="Clear" type="Button" parent="MarginContainer/Control/VBoxContainer/GraphActions/HBoxContainer"]
layout_mode = 2
text = "Clear"

[node name="Invert" type="Button" parent="MarginContainer/Control/VBoxContainer/GraphActions/HBoxContainer"]
layout_mode = 2
text = "Invert"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Control/VBoxContainer/GraphActions"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer/GraphActions"]
layout_mode = 2

[node name="RetractStrictCorners" type="Button" parent="MarginContainer/Control/VBoxContainer/GraphActions/HBoxContainer2"]
layout_mode = 2
text = "Retract strict corners"

[node name="RetractCorners" type="Button" parent="MarginContainer/Control/VBoxContainer/GraphActions/HBoxContainer2"]
layout_mode = 2
text = "Retract corners"

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="VertexActions" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/VertexActions"]
layout_mode = 2
text = "Vertex actions:"

[node name="Control4" type="Control" parent="MarginContainer/Control/VBoxContainer/VertexActions"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="AddVertex" type="Button" parent="MarginContainer/Control/VBoxContainer/VertexActions"]
layout_mode = 2
text = "Add"

[node name="RemoveVertex" type="Button" parent="MarginContainer/Control/VBoxContainer/VertexActions"]
layout_mode = 2
text = "Remove"

[node name="RetractVertex" type="Button" parent="MarginContainer/Control/VBoxContainer/VertexActions"]
layout_mode = 2
text = "Retract"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Control/VBoxContainer/VertexActions"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="VertexIndex" type="SpinBox" parent="MarginContainer/Control/VBoxContainer/VertexActions"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
alignment = 3
prefix = "Vertex:"

[node name="VSeparator3" type="VSeparator" parent="MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2

[node name="EdgeActions" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/EdgeActions"]
layout_mode = 2
text = "Edge actions:"

[node name="Control4" type="Control" parent="MarginContainer/Control/VBoxContainer/EdgeActions"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer/EdgeActions"]
layout_mode = 2

[node name="AddEdge" type="Button" parent="MarginContainer/Control/VBoxContainer/EdgeActions/HBoxContainer"]
layout_mode = 2
text = "Add"

[node name="RemoveEdge" type="Button" parent="MarginContainer/Control/VBoxContainer/EdgeActions/HBoxContainer"]
layout_mode = 2
text = "Remove"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Control/VBoxContainer/EdgeActions/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/VBoxContainer/EdgeActions/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="EdgeStartIndex" type="SpinBox" parent="MarginContainer/Control/VBoxContainer/EdgeActions/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 3
prefix = "Start:"

[node name="EdgeEndIndex" type="SpinBox" parent="MarginContainer/Control/VBoxContainer/EdgeActions/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 3
prefix = "End:"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.680581
anchor_top = 0.171404
anchor_right = 0.800363
anchor_bottom = 0.293478
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Graph display:"
horizontal_alignment = 1

[node name="GraphTextDisplay" type="Label" parent="MarginContainer/Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="SaveFileDialog" type="FileDialog" parent="."]
position = Vector2i(300, 100)
size = Vector2i(500, 400)
content_scale_mode = 2
content_scale_aspect = 1
ok_button_text = "Save"
access = 2
root_subfolder = "Graphs"
filters = PackedStringArray("*.csv", "*.tsv")

[node name="LoadFileDialog" type="FileDialog" parent="."]
title = "Open a File or Directory"
position = Vector2i(300, 100)
size = Vector2i(500, 400)
content_scale_mode = 2
content_scale_aspect = 1
ok_button_text = "Open"
file_mode = 3
access = 2
root_subfolder = "Graphs"
filters = PackedStringArray("*.csv", "*.tsv")

[connection signal="pressed" from="MarginContainer/Control/HBoxContainer/Undo" to="." method="undo"]
[connection signal="pressed" from="MarginContainer/Control/HBoxContainer/SaveLoad/SaveGraph" to="." method="save_graph_button"]
[connection signal="pressed" from="MarginContainer/Control/HBoxContainer/SaveLoad/LoadGraph" to="." method="load_graph_button"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/GraphProperties/MakeReflexive" to="." method="make_reflexive"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/GraphProperties/MakeUndirected" to="." method="make_undirected"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/GraphActions/HBoxContainer/Fill" to="." method="fill_graph"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/GraphActions/HBoxContainer/Clear" to="." method="clear_graph"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/GraphActions/HBoxContainer/Invert" to="." method="invert_graph"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/GraphActions/HBoxContainer2/RetractStrictCorners" to="." method="retract_strict_corners"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/GraphActions/HBoxContainer2/RetractCorners" to="." method="retract_corners"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/VertexActions/AddVertex" to="." method="add_vertex"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/VertexActions/RemoveVertex" to="." method="remove_vertex"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/VertexActions/RetractVertex" to="." method="retract_vertex"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/EdgeActions/HBoxContainer/AddEdge" to="." method="add_edge"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/EdgeActions/HBoxContainer/RemoveEdge" to="." method="remove_edge"]
